# ccauth

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  ci.yaml
ccauth/: __init__.py  _fileutils.py  _urlutils.py  appcred.py  auth.py  cli.py  config.py  discover.py  loader.py  plugin.py  writers.py
tests/: test_auth.py  test_cli.py  test_discover.py  test_plugin.py
