[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccauth"
version = "0.2.0"
description = "OIDC device flow auth plugin for OpenStack on Chameleon"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

dependencies = [
	"PyYAML>=5.4",
	"keystoneauth1>=4.0.0",
]

[project.optional-dependencies]
test = ["pytest>=6.0"]
lint = ["pylint>=2.0"]

[tool.pylint.format]
max-line-length = 120

[project.scripts]
cc-login = "ccauth.cli:main"

[project.entry-points."keystoneauth1.plugin"]
v3chameleonoidc = "ccauth.loader:ChameleonDeviceAuthLoader"
