[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccauth"
version = "0.2.0"
description = "OIDC device flow auth plugin for OpenStack on Chameleon"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}

dependencies = [
	"PyYAML>=5.4",
	"keystoneauth1>=4.0.0",
]

[tool.pylint.format]
max-line-length = 120

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.15.6",
]

[project.scripts]
cc-login = "ccauth.cli:main"

[project.entry-points."keystoneauth1.plugin"]
v3chameleonoidc = "ccauth.loader:ChameleonDeviceAuthLoader"
